# fastapi-monolith-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  compose.dev.yml  compose.prod.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  settings.yml
.github/workflows/: ci.yml  deploy-reusable.yml  dev_deploy.yml  production_deploy.yml  staging_deploy.yml
ansible/: .env.ansible.example  ansible.cfg
ansible/inventory/: aws.yml  digitalocean.yml
ansible/inventory/group_vars/: all.yml  aws.yml  digitalocean.yml
ansible/playbooks/: provision.yml
ansible/roles/backup/defaults/: main.yml
ansible/roles/backup/tasks/: main.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/files/: caddy-badbots.conf  caddy-dos.conf  caddy-http-auth.conf  caddy-noscript.conf  jail.local
ansible/roles/common/handlers/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/github_actions/tasks/: main.yml
ansible/roles/monitoring/defaults/: main.yml
ansible/roles/monitoring/tasks/: main.yml
data/dev_minio/.minio.sys/: format.json
docker/caddy/: Caddyfile  Dockerfile
docker/fastapi/: Dockerfile
docs/: backup.md  code-quality.md  deployment_automated.md  deployment_manual.md  github-actions-setup.md  index.md  local_setup.md  local_setup_no_docker.md  ssh-key-setup.md
scripts/: backup.sh  deploy.sh  health-check.sh  provision-server.sh  start.sh
src/: app.py
src/db/: config.py
src/db/alembic/: env.py
src/db/alembic/versions/: 022287733b1f_initial.py  2043d287fa27_added_user_model.py
src/db/models/: users.py
src/routers/: __init__.py  auth.py  users.py
src/schemas/: users.py
src/services/: users.py  utils.py
src/settings/: __init__.py
tests/: test_app.py
