[project]
name = "fastapi-monolith-boilerplate"
version = "0.1.0"
description = "A boilerplate for FastAPI monolith application"
authors = [{ name = "Borys Lemeshko" }]
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.135.2",
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn>=0.42.0",
    "pydantic-settings>=2.13.1",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
exclude = ["src/db/alembic"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "B904", # allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
